Changelog
=========

0.9 (2010-05-20)
----------------

* implemented default language fallback #5

0.8 (2010-02-23)
----------------

* reverted change @110991

* new doctests added without errors :

  - multilanguage text field 'title' added in SampleType
  - copy of schemas with multilanguage fields inside

* new doctests added with errors :

  - standard plone rename forms do not work
  - object serialization with multilanguage fields inside
    do not work (ExtensionClass error)

* fix the two previous errors :

  - the set method in MultiLanguageFieldMixin set the value
    for the current language when value is not a dict (fix rename forms)
  - the MultiLanguageFieldMixin class must inherit from ExtensionClass.Base
  - the MultiLanguageWidgetMixin class must inherit from ExtensionClass.Base

0.7 (2010-02-16)
----------------

* cleaned up and added patches necessary when using primary fields with archetypes schemaextender (patches/archetypes.py)
* removed unused variable (widgets.py)
* Added license information
* added "Uninstall" in uninstall profile registration for a better GenericSetup visibility in ZMI
* added minimal framework for tests
* added a minimal doctest (that was broken)
* fix zope2 initialization (minor refactoring) to make doctests working
* Added 2 Archetypes Schemata patches to avoid errors when reordering fields with
  an external schema extender (IOrderableSchemaExtender) applied to the schema
  with multilingual fields inside.
* Added validation_required, a simple validation for required
  multilingual fields.
* Some refactoring to make code more clear :

  - put monkey patches in patches folder
  - put different patches in different files
  - added Log whith patches
  - put MultiLanguageAware in a separate file (proxy.py)

* Added samples types and specific profile for tests
* Added doctests on multilingual fields and catalog search 
* fix http://plone.org/products/raptus.multilanguagefields/issues/2