@@ -4,6 +4,8 @@ Changelog
 0.9 (2010-05-20)
 ----------------
 
+* added catalog.xml to test profile to add multilanguage indexes
+
 * implemented default language fallback #5
 
 0.8 (2010-02-23)
